# structure-interactions

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.gitlab/issue_templates/: Default.md  feature_request.md  issue.md
examples/: analyse_intermolecular_interactions.py  analyse_intramolecular_interactions.py  basic_usage.py  example.py
examples/data/: 4lr6_lig.sdf  f_0_lig.mol2  f_0_lig.sdf  f_146_lig.mol2  f_146_lig.sdf  f_277_lig.mol2  f_277_lig.sdf  f_332_lig.mol2  f_332_lig.sdf
iktos/: __init__.py
iktos/structure_interactions/: Atom.py  InteractionParameters.py  InteractionProfiler.py  Ligand.py  Mol.py  Receptor.py  Water.py  __init__.py  analyse_complex.py  analysis.py  atom_typing.py  constants.py  detection.py  math_utils.py  mol_utils.py  refinement.py  utils.py
iktos/structure_interactions/plip/: Atom.py  InteractionProfiler.py  Ligand.py  Mol.py  Receptor.py  Water.py  __init__.py  constants.py  detection.py  refinement.py  utils.py
iktos/structure_interactions/visualization/: constants.py  pymol.py  utils.py
iktos/your_package_name/: __init__.py
tests/: conftest.py  test_InteractionProfiler.py  test_Ligand.py  test_Receptor.py  test_analyse_complex.py  test_analyse_complexes.py  test_analysis_inter.py  test_analysis_intra.py  test_detection.py  test_mol_utils.py  test_my_package.py  test_refinement.py  test_utils.py  test_visualisation.py
tests/data/: contacts_1P5E.json  contacts_3S3M.json  contacts_5N9T.json  contacts_5UIT.json  contacts_6NO9.json  contacts_6NW6.json  lig_1P5E.sdf  lig_3MZ9.sdf  lig_3S3M.sdf  lig_5N9T.sdf  lig_6NO9.sdf  lig_6NW6.sdf  ligand_bug_residue.sdf  ligand_with_hbond.sdf  poses_in_5UIT.sdf  single_sdf_bug_obabel.sdf  single_sdf_complete_new_format.sdf  template.sdf  template_bis.sdf
tests/files/: contacts_xray.json  ligand.sdf  multi_mol2.mol2
tests/output_files/: pymol.pse  pymol_multistate.pse
