[tool.poetry]
# TODO change your-package-name
name = "iktos-your-package-name"
version = "0.1.0"
description = "Ready to deliver"
authors = ["Iktos"]
readme = "README.md"
packages = [
    { include = "iktos" },
    { include = "iktos/**/*.py" },
]

[[tool.poetry.source]]
name = "iktos"
url = "https://pypi.golgoth.iktos.ai/simple"
secondary = true

[tool.poetry.dependencies]
python = "^3.7"
iktos-logger = "^2.0.2"

[tool.mypy]
python_version = "3.7"
ignore_missing_imports = true

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
flake8-colors = "^0.1.9"
mypy = "^0.910"
black = "==20.8b1"
pytest = "^6.2.2"
pytest-cov = "^3.0.0"
isort = "^5.9.0"
taskipy = "^1.2.1"

[tool.taskipy.tasks]
black = "black iktos/"
pc-black = "black "
check-black = "black iktos/ --check"
pc-check-black = "black --check"
isort = "isort iktos/"
pc-isort = "isort "
linter = "flake8 iktos/"
pc-linter = "flake8 "
mypy = "mypy iktos/"
pc-mypy = "mypy "
test = "python -m pytest --cov-report=term --cov-report=html:cov_html --cov ./iktos"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
atomic = true
known_localpkg = "iktos.your_package_name"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALPKG,LOCALFOLDER"

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".venv/*", "**/virtualenvs/**"]
