[tool.poetry]
# TODO change your-package-name
authors = ["Iktos"]
description = "Ready to deliver"
name = "iktos-structure-interactions"
packages = [
  {include = "iktos"},
  {include = "iktos/**/*.py"},
]
readme = "README.md"
version = "0.1.0"

[[tool.poetry.source]]
name = "iktos"
secondary = true
url = "https://pypi.golgoth.iktos.ai/simple"

[tool.poetry.dependencies]
iktos-logger = "^2.0.2"
python = "^3.7"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.7"

[tool.poetry.dev-dependencies]
black = "==20.8b1"
flake8 = "^3.9.0"
flake8-colors = "^0.1.9"
isort = "^5.9.0"
mypy = "^0.910"
pytest = "^6.2.2"
pytest-cov = "^3.0.0"
taskipy = "^1.2.1"

[tool.taskipy.tasks]
black = "black iktos/"
check-black = "black iktos/ --check"
isort = "isort iktos/"
linter = "flake8 iktos/"
mypy = "mypy iktos/"
pc-black = "black "
pc-check-black = "black --check"
pc-isort = "isort "
pc-linter = "flake8 "
pc-mypy = "mypy "
test = "python -m pytest --cov-report=term --cov-report=html:cov_html --cov ./iktos"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py37']

[tool.isort]
atomic = true
known_localpkg = "iktos.structure_interactions"
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALPKG,LOCALFOLDER"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]

[tool.coverage.run]
omit = [".venv/*", "**/virtualenvs/**"]
