[tool.poetry]
authors = ["Iktos"]
description = "Ready to deliver"
name = "iktos-structure-interactions"
packages = [
  {include = "iktos"},
  {include = "iktos/**/*.py"},
]
readme = "README.md"
version = "2.2.1"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = ">=0.22"
numpy="<2"

[tool.poetry.dev-dependencies]
black = "*"
deepdiff = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
coverage = "*"
taskipy = "*"

[tool.taskipy.tasks]
black = "black iktos/"
pc-black = "black "
check-black = "black iktos/ --check"
pc-check-black = "black --check"
test = "python -m pytest"
mypy = "mypy iktos/"
pc-mypy = "mypy"
linter = "flake8 iktos/"
pc-linter = "flake8 "
isort = "isort iktos/"
pc-isort = "isort "
check-isort = "isort -c iktos/"
pc-check-isort = "isort -c"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
ignore_missing_imports = true
python_version = "3.9"

[tool.isort]
py_version = 39
line_length = 88
profile = "black"
atomic = true
known_localpkg = "iktos.structure_interactions"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALPKG,LOCALFOLDER"

[tool.pytest.ini_options]
addopts = "--ff --cov-report=term --cov-report=xml:coverage.xml --junitxml=junit.xml --cov ./iktos -s"
testpaths = "tests"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
omit = [".venv/*", "**/virtualenvs/**"]
